Add OpenClaw channel plugin for AI gateway integration
Implement a TypeScript channel plugin that bridges OpenClaw's AI gateway
to Garmin Messenger via the Go MCP server. The plugin wraps the
garmin-messenger binary using MCP stdio transport and provides:

- Full channel lifecycle (setup, teardown, account resolution)
- OTP-based onboarding flow for phone number authentication
- Inbound message processing from MCP resource subscriptions
- Outbound text and media message delivery
- Agent tools for contacts sync, media download, and read receipts
- Platform-aware binary resolution with postinstall auto-download
- esbuild-based CJS bundling for Node.js compatibility

Distribution via GitHub Releases as a tarball with platform-specific
Go binaries downloaded at install time.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,3 +68,12 @@ jobs:
         run: cd lib/go && go test ./... -v
       - name: Test Go CLI
         run: cd apps/go-cli && go test ./... -v
+
+  test-openclaw-plugin:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+      - run: cd apps/openclaw-plugin && npm install --ignore-scripts && npx vitest run
