Code review fixes and minor improvements
- Disable file debug logging by default in OpenClaw plugin
- Add SHA256 checksum verification for postinstall binary download
- garminMediaToMime returns null for unknown types, skips with warning
- Default DM policy changed from "pairing" to "allowlist"
- Check json.Unmarshal error in handleListen
- Remove redundant nil check in handleStatusResource
- Upgrade listenMu to sync.RWMutex for read-only access
- Add onDisconnected callback to MCPBridge
- Add content-type validation in sendMedia (reject non-image/audio)
- Pre-push hook: only require venv when Python files changed
- Add dedup map safety cap (maxDedupEntries = 1000)
- Makefile: fail early with clear error when venv not activated

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  lint:
+  lint-python:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -23,7 +23,7 @@ jobs:
       - name: Lint Python CLI
         run: ruff check apps/python-cli/src/ apps/python-cli/tests/
 
-  test:
+  test-python:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
