--- a/apps/openclaw-plugin/package.json
+++ b/apps/openclaw-plugin/package.json
@@ -28,10 +28,14 @@
     "@modelcontextprotocol/sdk": "^1.26.0",
     "@sinclair/typebox": "^0.34.48",
     "@types/node": "^25.2.2",
-    "esbuild": "^0.25.0",
+    "esbuild": "^0.27.0",
     "openclaw": "^2026.2.9",
-    "typescript": "^5.7.0",
-    "vitest": "^3.0.0"
+    "typescript": "^5.9.0",
+    "vitest": "^4.0.0"
+  },
+  "overrides": {
+    "cmake-js": "^8.0.0",
+    "rimraf": "^6.0.0"
   },
   "openclaw": {
     "extensions": [
